# gold-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  app.manifest  app.rc  package.json
.github/workflows/: build.yml
src/: config.rs  index.html  main.rs  overlay.rs  price.rs  taskbar.rs  tray.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  taskbar.rs
