[package]
name = "gold-monitor"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "gold-monitor"
path = "src/main.rs"

[build-dependencies]
embed-resource = "3"

[dependencies]
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
windows = { version = "0.58", features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
